Added a page to create a new resume, added seperate components for all resume sections

--- a/blazing-resume.web/blazing-resume.web.csproj
+++ b/blazing-resume.web/blazing-resume.web.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MudBlazor" Version="6.11.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\blazing-resume.models\blazing-resume.models.csproj" />
+  </ItemGroup>
+
 </Project>
